--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,3 +42,10 @@
   font-size: 4em;
   font-family: fantasy;
 }
+.instruction {
+  font-size:1.5em;
+  margin-top:50px;
+  width:395px;
+  padding: 10px;
+  border-top: 1px solid #dadada;
+}
